--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">FirstApp</string>
     <string name="textview">TextView</string>
+    <string name="add">Add</string>
+    <string name="add_more">Add more</string>
 </resources>
